objects/REVVY__MnQuote__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Toro_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agree_to_Support_Plus_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Agree to Support Plus Terms &amp; Conditions</description>
        <label>Agree to Support Plus T &amp; C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allied_Non_Toro_Total__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Sum of all Allied (non-Toro) products in strategy 4 line items extension object</description>
        <label>Allied (Non-Toro) Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Price__c</fullName>
        <description>Quote Award Price equals sum of quote items&apos; total award price</description>
        <label>Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Dollar__c</fullName>
        <label>Total Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contains_Demo_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether a quote contains demo products or not</description>
        <label>Contains Demo Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contains_Incomplete_Configurations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contains Incomplete Configurations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>If the pricing program is based on the contract, this is the contract number</description>
        <label>Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency2__c</fullName>
        <defaultValue>IF( $User.REVVY__UserLocale__c == &quot;en_US&quot;, &quot;USD_USD&quot;, If($User.REVVY__UserLocale__c == &quot;en_CA&quot;, &quot;CAD_CAD&quot;,&quot;EUR&quot;))</defaultValue>
        <description>Third Currency to break SFDC currency iso code and REVVY currency dependency

CustomerCurrency_ISOCurrency</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD_USD</fullName>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>EUR_EUR</fullName>
                    <label>EUR</label>
                </value>
                <value>
                    <fullName>CAD_CAD</fullName>
                    <label>CAD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Conversion_Rate__c</fullName>
        <defaultValue>CURRENCYRATE( IF( $User.REVVY__UserLocale__c == &quot;en_US&quot;, &quot;USD&quot;, If($User.REVVY__UserLocale__c == &quot;en_CA&quot;, &quot;CAD&quot;,&quot;EUR&quot;)) )</defaultValue>
        <description>This is the adjusted exchange rate that the user can enter</description>
        <label>Adjusted Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSM_Approved_Amount__c</fullName>
        <label>DSM Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distributor_Contribution__c</fullName>
        <label>Distributor Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distributor_Responsibility__c</fullName>
        <description>Distributor Responsibility on Support Plus</description>
        <inlineHelpText>% of SP+ that distributor is responsible for covering</inlineHelpText>
        <label>Distributor Responsibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ext_MSRP__c</fullName>
        <label>EXT MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if financing is applied to quote</description>
        <label>Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Delivery__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Freight &amp; Delivery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <description>Total_Award__c + TPP_Total__c - Trade_In_Total__c + Set_Up_Total__c + Freight_Delivery__c + Allied_Non_Toro_Total__c + State_Sales_Tax__c</description>
        <formula>Total_Award__c  + Set_Up_Total__c + Freight_Delivery__c + State_Sales_Tax__c +  Misc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Percent__c</fullName>
        <description>Pricing Method: Gross Profit %</description>
        <label>Gross Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incumbent_Business__c</fullName>
        <label>Incumbent Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Club Car</fullName>
                </value>
                <value>
                    <fullName>Cushman</fullName>
                </value>
                <value>
                    <fullName>Deere</fullName>
                </value>
                <value>
                    <fullName>EZ-Go</fullName>
                </value>
                <value>
                    <fullName>Jake</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rainbow</fullName>
                </value>
                <value>
                    <fullName>Toro</fullName>
                </value>
                <value>
                    <fullName>Yamaha</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Misc__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Miscellaneous totals a user can enter in proposal template</description>
        <label>Misc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Vehicle_Total__c</fullName>
        <label>Non-Vehicle Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Method__c</fullName>
        <description>Store Price Method selected in pricing page</description>
        <label>Price Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Program_Name__c</fullName>
        <description>Store the name of Pricing Program selected in Pricing Page - Admin use for Pricing Program code</description>
        <label>Pricing Program Name Admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Program_Type__c</fullName>
        <description>The type of Pricing Program selected in pricing page</description>
        <label>Pricing Program Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability_Goes_Toro__c</fullName>
        <description>Commercial. Probability that the opportunity closes in Toro&apos;s favor</description>
        <inlineHelpText>Probability that the opportunity closes in Toro&apos;s favor</inlineHelpText>
        <label>Probability Goes Toro (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Probability__c</fullName>
        <description>Probability that the project will complete</description>
        <inlineHelpText>Probability that the project will complete by Close Date</inlineHelpText>
        <label>Project Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SP_Adjusted_Toro_Award__c</fullName>
        <inlineHelpText>Net impact on the Award based on the use of SP+ on Configured product</inlineHelpText>
        <label>SP Adjusted Toro Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_Ext_Dist_Responsibility__c</fullName>
        <description>Extended Distributor Responsibility is used in support plus page</description>
        <label>SP Ext Dist Responsibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_Toro_Responsibility__c</fullName>
        <description>Support Plus Toro Responsibility (previously Support_Plus_Rebate__c)</description>
        <label>SP Toro Responsibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_Total_Extended_DNET__c</fullName>
        <description>Field &quot;Support Plus Total Extended DNET&quot; is used in support plus page</description>
        <inlineHelpText>Net impact on the DNet based on the use of SP+ on Configured product</inlineHelpText>
        <label>Support Plus Total Extended DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percent__c</fullName>
        <label>Sales Tax Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Set_Up_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Set up total</description>
        <label>Set Up Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Sales_Tax__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>State Sales Tax that user will enter in QMS (State Tax%% + County Surtax%%)</description>
        <label>State Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Quantity__c</fullName>
        <label>Support Plus Quantity</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItem__c.Support_Plus_Items__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItem__c.REVVY__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Plus Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPP_Total__c</fullName>
        <description>Sum of all TPP products</description>
        <label>TPP Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <defaultValue>IF( $User.REVVY__UserLocale__c == &quot;en_US&quot;, &quot;North_America&quot;, If($User.REVVY__UserLocale__c == &quot;en_CA&quot;, &quot;North_America&quot;,&quot;International&quot;))</defaultValue>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North_America</fullName>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toro_ApprovalReason__c</fullName>
        <label>Toro Approval Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toro_ApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toro Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toro_Approval_Required_STI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toro Approval Required STI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toro_Award__c</fullName>
        <description>Total Award - TppAllied</description>
        <label>Toro Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Blended_Percent_of_DN__c</fullName>
        <label>% of DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_Cash_or_Financing__c</fullName>
        <label>Toro Cash or Financing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                    <default>true</default>
                    <label>Cash</label>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toro_Contribution__c</fullName>
        <inlineHelpText>Amount of SP+ to be claimed from Toro</inlineHelpText>
        <label>Toro Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_Award_Price__c</fullName>
        <label>Toro Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_DNET__c</fullName>
        <label>Toro Rollup DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_DNetWOTPPAllied__c</fullName>
        <description>Rollup over field &quot;DNet Without TPP and Allied&quot; on Quote Item</description>
        <label>Toro Total Toro DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Rollup_Setup_Fees__c</fullName>
        <label>Toro Rollup Setup Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Support_Plus_Allowance_Used__c</fullName>
        <inlineHelpText>Total Amount of Support Dollars Used Based on Selections</inlineHelpText>
        <label>Toro Support Plus Allowance Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Support_Plus_Allowance__c</fullName>
        <description>Toro Support Plus Allowance</description>
        <inlineHelpText>Allowable Program Support Dollars Based on Program</inlineHelpText>
        <label>Toro Support Plus Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_DNet__c</fullName>
        <label>Ext DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Quote_Gross_Profit_Percent__c</fullName>
        <label>GP %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Quote_Gross_Profit__c</fullName>
        <label>Toro GP $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Quote_Rebate__c</fullName>
        <label>Total Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Total_Rebate__c</fullName>
        <description>Roll up of Total Rebate from Quote Item</description>
        <label>Toro Total Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Award_Dollars__c</fullName>
        <description>Pricing Method: Total Award Dollars</description>
        <label>Total Award Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Award_Price_Alternate_Currency__c</fullName>
        <formula>Currency_Conversion_Rate__c *  REVVY__One_Time_Total_Value_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Award Price Alternate Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Award__c</fullName>
        <label>Ext Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Extended_DNet__c</fullName>
        <description>Total Extended Dnet Prices</description>
        <label>Total Extended DNet</label>
        <summarizedField>REVVY__MnQuoteItem__c.DNet_Price__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItem__c.REVVY__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Award_Price_Alt_Currency__c</fullName>
        <formula>Currency_Conversion_Rate__c *  Total_Quote_Award_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quote Award Price Alt Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Award_Price__c</fullName>
        <label>Total Quote Award Price</label>
        <summarizedField>REVVY__MnQuoteItem__c.Total_Award_price__c</summarizedField>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItem__c.Total_Award_price__c</field>
            <operation>notEqual</operation>
            <value>2500</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItem__c.REVVY__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rebate__c</fullName>
        <description>Roll up of Total Rebate from Quote Item</description>
        <label>Total Rebate - Do Not Use</label>
        <summarizedField>REVVY__MnQuoteItem__c.REVVY__One_Time_Cost_Price_Before_Adjustment_F__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItem__c.REVVY__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trade_In_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Sum of all Trade In products</description>
        <label>Trade In Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Total__c</fullName>
        <label>Vehicle Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>